Fix: Add scrollbar if necessary for filter log

--- a/source/css/plugins/_manipulation.scss
+++ b/source/css/plugins/_manipulation.scss
@@ -57,6 +57,7 @@
 
 .manipulation-tools {
   flex: 1 1 auto;
+  overflow: auto;
 
   .manipulation-tools-text {
     color: #FBF7F6;
